# ble_heart

./: .gitignore  CMakeLists.txt  README.md  meson.build  meson.cross_arm_eabi  requirements.txt  run_cmake.sh  run_meson.sh  setup_linux.sh  setup_windows.sh  toolchain.cmake
hardware/ble_heart/: ble_heart.kicad_pcb  ble_heart.net  ble_heart.pro  ble_heart.sch
hardware/fab_files/v1.0/: ble_heart-B_Cu.gbl  ble_heart-B_Mask.gbs  ble_heart-B_Paste.gbp  ble_heart-B_SilkS.gbo  ble_heart-Edge_Cuts.gm1  ble_heart-F_Cu.gtl  ble_heart-F_Mask.gts  ble_heart-F_Paste.gtp  ble_heart-F_SilkS.gto  ble_heart-NPTH.drl  ble_heart-PTH.drl  ble_heart-job.gbrjob
nrf5_sdk/: CMakeLists.txt
src/: CMakeLists.txt  bootloader.ld
src/app/: CMakeLists.txt  advertiser.c  advertiser.h  app_main.c  board.h  i2s_ws2812b_drive.c  led.c  meson.build
src/app/config/: app_config.h  sdk_config.h
src/bootloader/: CMakeLists.txt  dfu_public_key.c
src/bootloader/config/: sdk_config.h
