set(SDK_PATH $ENV{NRF_SDK_PATH})

message(STATUS "SDK Path: ${SDK_PATH}")

list(APPEND SRC_FILES
        ${SDK_PATH}/components/ble/common/ble_advdata.c
        ${SDK_PATH}/components/ble/common/ble_srv_common.c
        ${SDK_PATH}/components/boards/boards.c
        ${SDK_PATH}/components/libraries/atomic/nrf_atomic.c
        ${SDK_PATH}/components/libraries/atomic_fifo/nrf_atfifo.c
        ${SDK_PATH}/components/libraries/balloc/nrf_balloc.c
        ${SDK_PATH}/components/libraries/bsp/bsp.c
        ${SDK_PATH}/components/libraries/button/app_button.c
        ${SDK_PATH}/components/libraries/experimental_section_vars/nrf_section_iter.c
        ${SDK_PATH}/components/libraries/hardfault/hardfault_implementation.c
        ${SDK_PATH}/components/libraries/log/src/nrf_log_backend_rtt.c
        ${SDK_PATH}/components/libraries/log/src/nrf_log_backend_serial.c
        ${SDK_PATH}/components/libraries/log/src/nrf_log_backend_uart.c
        ${SDK_PATH}/components/libraries/log/src/nrf_log_default_backends.c
        ${SDK_PATH}/components/libraries/log/src/nrf_log_frontend.c
        ${SDK_PATH}/components/libraries/log/src/nrf_log_str_formatter.c
        ${SDK_PATH}/components/libraries/memobj/nrf_memobj.c
        ${SDK_PATH}/components/libraries/pwr_mgmt/nrf_pwr_mgmt.c
        ${SDK_PATH}/components/libraries/ringbuf/nrf_ringbuf.c
        ${SDK_PATH}/components/libraries/scheduler/app_scheduler.c
        ${SDK_PATH}/components/libraries/sortlist/nrf_sortlist.c
        ${SDK_PATH}/components/libraries/strerror/nrf_strerror.c
        ${SDK_PATH}/components/libraries/timer/app_timer2.c
        ${SDK_PATH}/components/libraries/timer/drv_rtc.c
        ${SDK_PATH}/components/libraries/util/app_error.c
        ${SDK_PATH}/components/libraries/util/app_error_handler_gcc.c
        ${SDK_PATH}/components/libraries/util/app_error_weak.c
        ${SDK_PATH}/components/libraries/util/app_util_platform.c
        ${SDK_PATH}/components/libraries/util/nrf_assert.c
        ${SDK_PATH}/components/softdevice/common/nrf_sdh.c
        ${SDK_PATH}/components/softdevice/common/nrf_sdh_ble.c
        ${SDK_PATH}/components/softdevice/common/nrf_sdh_soc.c
        ${SDK_PATH}/external/fprintf/nrf_fprintf.c
        ${SDK_PATH}/external/fprintf/nrf_fprintf_format.c
        ${SDK_PATH}/external/segger_rtt/SEGGER_RTT.c
        ${SDK_PATH}/external/segger_rtt/SEGGER_RTT_Syscalls_GCC.c
        ${SDK_PATH}/external/segger_rtt/SEGGER_RTT_printf.c
        ${SDK_PATH}/external/utf_converter/utf.c
        ${SDK_PATH}/integration/nrfx/legacy/nrf_drv_clock.c
        ${SDK_PATH}/integration/nrfx/legacy/nrf_drv_uart.c
        ${SDK_PATH}/modules/nrfx/drivers/src/nrfx_clock.c
        ${SDK_PATH}/modules/nrfx/drivers/src/nrfx_gpiote.c
        ${SDK_PATH}/modules/nrfx/drivers/src/nrfx_uart.c
        ${SDK_PATH}/modules/nrfx/drivers/src/nrfx_uarte.c
        ${SDK_PATH}/modules/nrfx/drivers/src/prs/nrfx_prs.c
        ${SDK_PATH}/modules/nrfx/mdk/gcc_startup_nrf52.S
        ${SDK_PATH}/modules/nrfx/mdk/system_nrf52.c
        ${SDK_PATH}/modules/nrfx/soc/nrfx_atomic.c
    )

# Include folders common to all targets
list(APPEND INC_FOLDERS
        ${SDK_PATH}/components
        ${SDK_PATH}/components/ble/ble_advertising
        ${SDK_PATH}/components/ble/ble_dtm
        ${SDK_PATH}/components/ble/ble_racp
        ${SDK_PATH}/components/ble/ble_services/ble_ancs_c
        ${SDK_PATH}/components/ble/ble_services/ble_ans_c
        ${SDK_PATH}/components/ble/ble_services/ble_bas
        ${SDK_PATH}/components/ble/ble_services/ble_bas_c
        ${SDK_PATH}/components/ble/ble_services/ble_cscs
        ${SDK_PATH}/components/ble/ble_services/ble_cts_c
        ${SDK_PATH}/components/ble/ble_services/ble_dfu
        ${SDK_PATH}/components/ble/ble_services/ble_dis
        ${SDK_PATH}/components/ble/ble_services/ble_gls
        ${SDK_PATH}/components/ble/ble_services/ble_hids
        ${SDK_PATH}/components/ble/ble_services/ble_hrs
        ${SDK_PATH}/components/ble/ble_services/ble_hrs_c
        ${SDK_PATH}/components/ble/ble_services/ble_hts
        ${SDK_PATH}/components/ble/ble_services/ble_ias
        ${SDK_PATH}/components/ble/ble_services/ble_ias_c
        ${SDK_PATH}/components/ble/ble_services/ble_lbs
        ${SDK_PATH}/components/ble/ble_services/ble_lbs_c
        ${SDK_PATH}/components/ble/ble_services/ble_lls
        ${SDK_PATH}/components/ble/ble_services/ble_nus
        ${SDK_PATH}/components/ble/ble_services/ble_nus_c
        ${SDK_PATH}/components/ble/ble_services/ble_rscs
        ${SDK_PATH}/components/ble/ble_services/ble_rscs_c
        ${SDK_PATH}/components/ble/ble_services/ble_tps
        ${SDK_PATH}/components/ble/common
        ${SDK_PATH}/components/ble/nrf_ble_qwr
        ${SDK_PATH}/components/ble/peer_manager
        ${SDK_PATH}/components/boards
        ${SDK_PATH}/components/libraries/atomic
        ${SDK_PATH}/components/libraries/atomic_fifo
        ${SDK_PATH}/components/libraries/balloc
        ${SDK_PATH}/components/libraries/bootloader/ble_dfu
        ${SDK_PATH}/components/libraries/bsp
        ${SDK_PATH}/components/libraries/button
        ${SDK_PATH}/components/libraries/cli
        ${SDK_PATH}/components/libraries/crc16
        ${SDK_PATH}/components/libraries/crc32
        ${SDK_PATH}/components/libraries/crypto
        ${SDK_PATH}/components/libraries/csense
        ${SDK_PATH}/components/libraries/csense_drv
        ${SDK_PATH}/components/libraries/delay
        ${SDK_PATH}/components/libraries/ecc
        ${SDK_PATH}/components/libraries/experimental_section_vars
        ${SDK_PATH}/components/libraries/experimental_task_manager
        ${SDK_PATH}/components/libraries/fds
        ${SDK_PATH}/components/libraries/fstorage
        ${SDK_PATH}/components/libraries/gfx
        ${SDK_PATH}/components/libraries/gpiote
        ${SDK_PATH}/components/libraries/hardfault
        ${SDK_PATH}/components/libraries/hci
        ${SDK_PATH}/components/libraries/led_softblink
        ${SDK_PATH}/components/libraries/log
        ${SDK_PATH}/components/libraries/log/src
        ${SDK_PATH}/components/libraries/low_power_pwm
        ${SDK_PATH}/components/libraries/mem_manager
        ${SDK_PATH}/components/libraries/memobj
        ${SDK_PATH}/components/libraries/mpu
        ${SDK_PATH}/components/libraries/mutex
        ${SDK_PATH}/components/libraries/pwm
        ${SDK_PATH}/components/libraries/pwr_mgmt
        ${SDK_PATH}/components/libraries/queue
        ${SDK_PATH}/components/libraries/ringbuf
        ${SDK_PATH}/components/libraries/scheduler
        ${SDK_PATH}/components/libraries/sdcard
        ${SDK_PATH}/components/libraries/slip
        ${SDK_PATH}/components/libraries/sortlist
        ${SDK_PATH}/components/libraries/spi_mngr
        ${SDK_PATH}/components/libraries/stack_guard
        ${SDK_PATH}/components/libraries/strerror
        ${SDK_PATH}/components/libraries/svc
        ${SDK_PATH}/components/libraries/timer
        ${SDK_PATH}/components/libraries/twi_mngr
        ${SDK_PATH}/components/libraries/twi_sensor
        ${SDK_PATH}/components/libraries/usbd
        ${SDK_PATH}/components/libraries/usbd/class/audio
        ${SDK_PATH}/components/libraries/usbd/class/cdc
        ${SDK_PATH}/components/libraries/usbd/class/cdc/acm
        ${SDK_PATH}/components/libraries/usbd/class/hid
        ${SDK_PATH}/components/libraries/usbd/class/hid/generic
        ${SDK_PATH}/components/libraries/usbd/class/hid/kbd
        ${SDK_PATH}/components/libraries/usbd/class/hid/mouse
        ${SDK_PATH}/components/libraries/usbd/class/msc
        ${SDK_PATH}/components/libraries/util
        ${SDK_PATH}/components/nfc/ndef/conn_hand_parser
        ${SDK_PATH}/components/nfc/ndef/conn_hand_parser/ac_rec_parser
        ${SDK_PATH}/components/nfc/ndef/conn_hand_parser/ble_oob_advdata_parser
        ${SDK_PATH}/components/nfc/ndef/conn_hand_parser/le_oob_rec_parser
        ${SDK_PATH}/components/nfc/ndef/connection_handover/ac_rec
        ${SDK_PATH}/components/nfc/ndef/connection_handover/ble_oob_advdata
        ${SDK_PATH}/components/nfc/ndef/connection_handover/ble_pair_lib
        ${SDK_PATH}/components/nfc/ndef/connection_handover/ble_pair_msg
        ${SDK_PATH}/components/nfc/ndef/connection_handover/common
        ${SDK_PATH}/components/nfc/ndef/connection_handover/ep_oob_rec
        ${SDK_PATH}/components/nfc/ndef/connection_handover/hs_rec
        ${SDK_PATH}/components/nfc/ndef/connection_handover/le_oob_rec
        ${SDK_PATH}/components/nfc/ndef/generic/message
        ${SDK_PATH}/components/nfc/ndef/generic/record
        ${SDK_PATH}/components/nfc/ndef/launchapp
        ${SDK_PATH}/components/nfc/ndef/parser/message
        ${SDK_PATH}/components/nfc/ndef/parser/record
        ${SDK_PATH}/components/nfc/ndef/text
        ${SDK_PATH}/components/nfc/ndef/uri
        ${SDK_PATH}/components/nfc/platform
        ${SDK_PATH}/components/nfc/t2t_lib
        ${SDK_PATH}/components/nfc/t2t_parser
        ${SDK_PATH}/components/nfc/t4t_lib
        ${SDK_PATH}/components/nfc/t4t_parser/apdu
        ${SDK_PATH}/components/nfc/t4t_parser/cc_file
        ${SDK_PATH}/components/nfc/t4t_parser/hl_detection_procedure
        ${SDK_PATH}/components/nfc/t4t_parser/tlv
        ${SDK_PATH}/components/softdevice/common
        ${SDK_PATH}/components/softdevice/s132/headers
        ${SDK_PATH}/components/softdevice/s132/headers/nrf52
        ${SDK_PATH}/components/toolchain/cmsis/include
        ${SDK_PATH}/external/fprintf
        ${SDK_PATH}/external/segger_rtt
        ${SDK_PATH}/external/utf_converter
        ${SDK_PATH}/integration/nrfx
        ${SDK_PATH}/integration/nrfx/legacy
        ${SDK_PATH}/modules/nrfx
        ${SDK_PATH}/modules/nrfx/drivers/include
        ${SDK_PATH}/modules/nrfx/hal
        ${SDK_PATH}/modules/nrfx/mdk
        config
    )

add_library(sdk STATIC ${SRC_FILES})

target_compile_definitions(sdk PRIVATE  APP_TIMER_V2
                                        APP_TIMER_V2_RTC1_ENABLED
                                        BOARD_PCA10040
                                        CONFIG_GPIO_AS_PINRESET
                                        FLOAT_ABI_HARD
                                        NRF52
                                        NRF52832_XXAA
                                        NRF52_PAN_74
                                        NRF_SD_BLE_API_VERSION=7
                                        S132
                                        SOFTDEVICE_PRESENT)

target_include_directories(sdk PUBLIC ${INC_FOLDERS})
